[package]
name = "es_runtime"
version = "0.1.3"
authors = ["Andries Hiemstra"]
edition = "2018"
description = "An API and Utils around the spidermonkey script engine"
homepage = "https://gitlab.com/drfos/es_runtime"
keywords = ["script", "javascript", "runtime", "engine", "spidermonkey"]
repository = "https://gitlab.com/drfos/es_runtime.git"
license = "GPL-3.0"
documentation = "https://gitlab.com/drfos/es_runtime/blob/master/docs/HOWTO.md"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
log = "0.4.8"
simple-logging = "2.0.2"
thread-id = "3.3.0"
num_cpus = "1.0"
uuid = {version = "0.8.1", features =["v4"]}
rayon = "1.3.0"
mozjs = {version = "0.10.1", features = ["debugmozjs"]}
lru = "0.4.3"