[package]
name = "spidermonkey_runtime"
version = "0.7.0"
authors = ["Andries Hiemstra"]
edition = "2018"
description = "An API and Utils around the spidermonkey script engine"
homepage = "https://github.com/HiRoFa/spidermonkey_runtime"
keywords = ["mozjs", "javascript", "runtime", "engine", "spidermonkey"]
repository = "https://github.com/HiRoFa/spidermonkey_runtime"
license = "GPL-3.0"
documentation = "https://hirofa.github.io/spidermonkey_runtime/spidermonkey_runtime/index.html"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
log = "0.4.8"
simple-logging = "2.0.2"
hirofa_utils = {git="https://github.com/HiRoFa/utils"}
thread-id = "3.3.0"
num_cpus = "1.13.0"
uuid = {version = "0.8.1", features =["v4"]}
rayon = "1.3.0"
#mozjs =  {package = "mozjs", git = "https://github.com/servo/rust-mozjs", rev = "fe738cca3320ffcbc4c520ced79c2141ceabf42d", features = ["debugmozjs"]}
mozjs =  {package = "mozjs", git = "https://github.com/andrieshiemstra/rust-mozjs", features = ["debugmozjs"]}
#mozjs =  {package = "mozjs", path = "../../andrieshiemstra/rust-mozjs", features = ["debugmozjs"]}
lru = "0.5.0"
either = "1.6.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
#features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
